@@ -6,6 +6,7 @@
 #define G_BYTE_ORDER             @ORDER@
 #define G_GNUC_NORETURN          @GNUC_NORETURN@
 #define G_SEARCHPATH_SEPARATOR_S "@SEARCHSEP@"
+#define G_SEARCHPATH_SEPARATOR   '@SEARCHSEP@'
 #define G_DIR_SEPARATOR          '@PATHSEP@'
 #define G_DIR_SEPARATOR_S        "@PATHSEP@"
 #define G_BREAKPOINT             @BREAKPOINT@
